// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Interest Renders correctly default 1`] = `
<section>
  <div
    style={
      Object {
        "height": "100%",
      }
    }
  />
  <ul
    className="MuiList-root-1 MuiList-padding-2"
  >
    <li>
      <ul>
        <li
          className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
        >
          test
        </li>
      </ul>
      <hr
        className="MuiDivider-root-11"
      />
    </li>
  </ul>
</section>
`;

exports[`components > Interest Renders correctly with interests 1`] = `
<section>
  <div
    style={
      Object {
        "height": "100%",
      }
    }
  />
  <ul
    className="MuiList-root-1 MuiList-padding-2"
  >
    <li>
      <ul>
        <li
          className="MuiListSubheader-root-5 MuiListSubheader-sticky-10 MuiListSubheader-gutters-8"
        >
          test
        </li>
        <li
          className="MuiListItem-root-15 MuiListItem-default-18 MuiListItem-gutters-22"
          disabled={false}
        >
          <div
            className="MuiListItemText-root-25"
          >
            <span
              className="MuiTypography-root-31 MuiTypography-subheading-38 MuiListItemText-primary-28"
            >
              test
            </span>
          </div>
        </li>
      </ul>
      <hr
        className="MuiDivider-root-11"
      />
    </li>
  </ul>
</section>
`;
